--- a/notebooks/final_transaction.ipynb
+++ b/notebooks/final_transaction.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 14:51:09 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.179.36 instead (on interface en0)\n",
-      "22/09/14 14:51:09 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/09/16 14:51:54 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.174.166 instead (on interface en0)\n",
+      "22/09/16 14:51:54 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -25,9 +25,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 14:51:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/14 14:51:10 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/14 14:51:10 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "22/09/16 14:51:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/16 14:51:56 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/09/16 14:51:56 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -200,22 +200,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#加入 sa2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# fraud\n",
     "consumer_fraud = consumer_fraud.select(col(\"user_id\"),col(\"fraud_probability\"),to_date(col(\"order_datetime\"),\"yyyy-MM-dd\").alias(\"date\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,25 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#加入 income & age"
+    "consumer_final = consumer.join(consumer_fraud_final, consumer.user_id == consumer_fraud_final.user_id,'outer').drop(consumer_fraud_final.user_id).fillna(0).fillna(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumer_final = consumer.join(consumer_fraud_final, consumer.user_id == consumer_fraud_final.user_id).drop(consumer_fraud_final.user_id)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -291,18 +273,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 93:>                                                         (0 + 8) / 9]\r"
+      "[Stage 130:>                                                        (0 + 8) / 9]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/14 14:52:36 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "22/09/16 14:53:05 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
       "Scaling row group sizes to 96.54% for 7 writers\n",
-      "22/09/14 14:52:36 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "22/09/16 14:53:05 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
       "Scaling row group sizes to 84.47% for 8 writers\n",
-      "22/09/14 14:52:39 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
+      "22/09/16 14:53:09 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
       "Scaling row group sizes to 96.54% for 7 writers\n"
      ]
     },
@@ -315,7 +297,7 @@
     }
    ],
    "source": [
-    "transaction = ori_transaction.join(consumer_final, ori_transaction.user_id == consumer_final.user_id).drop(consumer_final.user_id)\n",
+    "transaction = ori_transaction.join(consumer_final, ori_transaction.user_id == consumer_final.user_id,'outer').drop(consumer_final.user_id)\n",
     "transaction = transaction.sort(transaction.user_id)\n",
     "\n",
     "transaction.write.parquet(f\"../data/curated/final_transaction.parquet\")\n"
