Updated geovisualisation code

--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/09/19 09:44:59 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 172.16.5.95 instead (on interface en0)\n",
+      "22/09/19 09:44:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/09/19 09:45:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -25,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +65,7 @@
        " ('merchant_abn', 'bigint')]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,14 +73,15 @@
    "source": [
     "final = spark.read.parquet('../data/curated/final_merchant_info.parquet')\n",
     "geospark = spark.read.parquet('../data/curated/SA2_2021_VIC_shapefile.parquet/')\n",
-    "vic_data = geospark.join(final, geospark.SA2_CODE21 == final.SA2_CODE_2021, \"left\").drop(final.SA2_CODE_2021)\n",
-    "\n",
-    "vic_data.dtypes"
+    "census = spark.read.parquet('../data/curated/final_census.parquet')\n",
+    "merchant_vic_data = geospark.join(final, geospark.SA2_CODE21 == final.SA2_CODE_2021, \"left\").drop(final.SA2_CODE_2021)\n",
+    "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)\n",
+    "merchant_vic_data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,10 +90,8 @@
     "    pdf = geospark.select(\"SA2_CODE21\", \"geometry\").toPandas()\n",
     "    pdf['geometry'] = gpd.GeoSeries.from_wkt(pdf['geometry'])\n",
     "    gdf = gpd.GeoDataFrame(pdf, geometry='geometry')\n",
-    "    print(pdf.columns)\n",
     "    geoJSON = gdf[['SA2_CODE21', 'geometry']].drop_duplicates('SA2_CODE21').to_json()\n",
     "    m = folium.Map(location=[-37.84, 144.95], tiles=\"Stamen Terrain\", zoom_start=10)\n",
-    "    print(geoJSON[:300])\n",
     "    # refer to the folium documentations on how to plot aggregated data.\n",
     "    c = folium.Choropleth(\n",
     "        geo_data=geoJSON, # geoJSON \n",
@@ -94,13 +106,13 @@
     "\n",
     "    map = c.add_to(m)\n",
     "\n",
-    "    map.save('../plots/foliumChoropleth'+col_name+'.html')\n",
+    "    map.save('../plots/foliumChoropleth_'+col_name+'.html')\n",
     "    map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,18 +121,13 @@
      "text": [
       "                                                                                \r"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['SA2_CODE21', 'geometry'], dtype='object')\n",
-      "{\"type\": \"FeatureCollection\", \"features\": [{\"id\": \"0\", \"type\": \"Feature\", \"properties\": {\"SA2_CODE21\": \"216021413\"}, \"geometry\": {\"type\": \"Polygon\", \"coordinates\": [[[144.9840516499428, -36.05297636768364], [144.9840130799277, -36.05318303768235], [144.9839141899028, -36.05357800767813], [144.983900\n"
-     ]
     }
    ],
    "source": [
-    "visualisation(\"income_percentage\", vic_data, geospark,\"average income percentage by SA2\")"
+    "visualisation(\"income_percentage\", vic_data, geospark,\"average income percentage by SA2\")\n",
+    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")\n",
+    "visualisation(\"count_cus_per_mon\", merchant_vic_data, geospark,\"customer number per month\")\n",
+    "visualisation(\"Avg_amount_monthly\", merchant_vic_data, geospark,\"average monthly amount\")"
    ]
   }
  ],
