restored final_merchant code

--- a/notebooks/final_merchant.ipynb
+++ b/notebooks/final_merchant.ipynb
@@ -2,49 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-<<<<<<< Updated upstream
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/16 16:09:59 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.174.166 instead (on interface en0)\n",
-      "22/09/16 16:09:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-=======
->>>>>>> Stashed changes
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/09/19 11:34:45 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 172.16.5.95 instead (on interface en0)\n",
-      "22/09/19 11:34:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "22/09/19 11:34:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-<<<<<<< Updated upstream
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/16 16:10:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/16 16:10:00 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/16 16:10:00 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
-=======
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/09/19 11:34:48 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/19 11:34:48 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "22/09/19 11:34:48 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
->>>>>>> Stashed changes
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -63,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "merchant_fraud = spark.read.option(\"header\",True).csv('../data/tables/merchant_fraud_probability.csv')\n",
@@ -82,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +85,7 @@
        "+------------+---------------+"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,25 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-<<<<<<< Updated upstream
-      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_62096/2153331469.py:3: SettingWithCopyWarning: \n",
-=======
-      "/Users/seren/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
->>>>>>> Stashed changes
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_block(indexer, value, name)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tbl_merchants_pd = tbl_merchants.toPandas()\n",
     "for i in range(int(tbl_merchants_pd['tags'].count())):\n",
@@ -172,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,25 +116,21 @@
     "\n",
     "for row in range(int(len(merchant_tags))):\n",
     "    for col in range(3):\n",
-    "        merchant_tags.iloc[row,col] = merchant_tags.iloc[row,col].replace(r'((', r'').replace(r', (', r'').replace(r'take rate:', r'')\n",
+    "        merchant_tags.iloc[row,col] = merchant_tags.iloc[row,col].replace(r'((', r'').replace(r', (', r'').replace(r'take_rate:', r'')\n",
     "merchant_tags.rename(columns = {0 : 'store_type', 1 : 'revenue_levels', 2 : 'take_rate'}, inplace = True)\n",
     "merchant_tags = merchant_tags[['store_type', 'revenue_levels', 'take_rate']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< Updated upstream
-      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_62096/1254620571.py:6: SettingWithCopyWarning: \n",
-=======
       "/Users/seren/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
->>>>>>> Stashed changes
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -218,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +175,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>merchant_abn</th>\n",
-       "      <th>Store type</th>\n",
-       "      <th>Revenue levels</th>\n",
-       "      <th>Take rate</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>revenue_levels</th>\n",
+       "      <th>take_rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -254,57 +186,57 @@
        "      <td>10023283211</td>\n",
        "      <td>furniture, home furnishings and equipment shop...</td>\n",
        "      <td>e</td>\n",
-       "      <td>0.18</td>\n",
+       "      <td>take rate: 0.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10142254217</td>\n",
        "      <td>cable, satellite, and other pay television and...</td>\n",
        "      <td>b</td>\n",
-       "      <td>4.22</td>\n",
+       "      <td>take rate: 4.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10165489824</td>\n",
        "      <td>jewelry, watch, clock, and silverware shops</td>\n",
        "      <td>b</td>\n",
-       "      <td>4.40</td>\n",
+       "      <td>take rate: 4.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10187291046</td>\n",
        "      <td>watch, clock, and jewelry repair shops</td>\n",
        "      <td>b</td>\n",
-       "      <td>3.29</td>\n",
+       "      <td>take rate: 3.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10192359162</td>\n",
        "      <td>music shops - musical instruments, pianos, and...</td>\n",
        "      <td>a</td>\n",
-       "      <td>6.33</td>\n",
+       "      <td>take rate: 6.33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   merchant_abn                                         Store type  \\\n",
+       "   merchant_abn                                         store_type  \\\n",
        "0   10023283211  furniture, home furnishings and equipment shop...   \n",
        "1   10142254217  cable, satellite, and other pay television and...   \n",
        "2   10165489824        jewelry, watch, clock, and silverware shops   \n",
        "3   10187291046             watch, clock, and jewelry repair shops   \n",
        "4   10192359162  music shops - musical instruments, pianos, and...   \n",
        "\n",
-       "  Revenue levels Take rate  \n",
-       "0              e      0.18  \n",
-       "1              b      4.22  \n",
-       "2              b      4.40  \n",
-       "3              b      3.29  \n",
-       "4              a      6.33  "
+       "  revenue_levels        take_rate  \n",
+       "0              e  take rate: 0.18  \n",
+       "1              b  take rate: 4.22  \n",
+       "2              b  take rate: 4.40  \n",
+       "3              b  take rate: 3.29  \n",
+       "4              a  take rate: 6.33  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3.8.13 ('ads')",
    "language": "python",
    "name": "python3"
   },
@@ -332,12 +264,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
+    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
    }
   }
  },
