--- a/notebooks/final_merchant.ipynb
+++ b/notebooks/final_merchant.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/16 16:09:59 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.174.166 instead (on interface en0)\n",
-      "22/09/16 16:09:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/09/19 14:06:23 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.190.17 instead (on interface en0)\n",
+      "22/09/19 14:06:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -25,9 +25,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/16 16:10:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/16 16:10:00 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/16 16:10:00 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "22/09/19 14:06:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/19 14:06:25 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/09/19 14:06:25 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_62096/2153331469.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_77854/2153331469.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -148,8 +148,8 @@
     "for row in range(int(len(merchant_tags))):\n",
     "    for col in range(3):\n",
     "        merchant_tags.iloc[row,col] = merchant_tags.iloc[row,col].replace(r'((', r'').replace(r', (', r'').replace(r'take rate:', r'')\n",
-    "merchant_tags.rename(columns = {0 : 'Store type', 1 : 'Revenue levels', 2 : 'Take rate'}, inplace = True)\n",
-    "merchant_tags = merchant_tags[['Store type', 'Revenue levels', 'Take rate']]"
+    "merchant_tags.rename(columns = {0 : 'Store_type', 1 : 'Revenue_levels', 2 : 'Take_rate'}, inplace = True)\n",
+    "merchant_tags = merchant_tags[['Store_type', 'Revenue_levels', 'Take_rate']]"
    ]
   },
   {
@@ -161,21 +161,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_62096/1254620571.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_77854/2368363783.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  tbl_merchants_pd['Store type'][i] = ' '.join(tbl_merchants_pd['Store type'][i].split())\n"
+      "  tbl_merchants_pd['Store_type'][i] = ' '.join(tbl_merchants_pd['Store_type'][i].split())\n"
      ]
     }
    ],
    "source": [
-    "tbl_merchants_pd[['Store type', 'Revenue levels', 'Take rate']] = merchant_tags[['Store type', 'Revenue levels', 'Take rate']]\n",
+    "tbl_merchants_pd[['Store_type', 'Revenue_levels', 'Take_rate']] = merchant_tags[['Store_type', 'Revenue_levels', 'Take_rate']]\n",
     "#merchant.drop(columns=['tags'])\n",
-    "tbl_merchants_pd['Store type'] = tbl_merchants_pd['Store type'].str.lower()\n",
+    "tbl_merchants_pd['Store_type'] = tbl_merchants_pd['Store_type'].str.lower()\n",
     "\n",
     "for i in range(len(tbl_merchants_pd)):\n",
-    "    tbl_merchants_pd['Store type'][i] = ' '.join(tbl_merchants_pd['Store type'][i].split())\n",
+    "    tbl_merchants_pd['Store_type'][i] = ' '.join(tbl_merchants_pd['Store_type'][i].split())\n",
     " "
    ]
   },
@@ -183,99 +183,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>merchant_abn</th>\n",
-       "      <th>Store type</th>\n",
-       "      <th>Revenue levels</th>\n",
-       "      <th>Take rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10023283211</td>\n",
-       "      <td>furniture, home furnishings and equipment shop...</td>\n",
-       "      <td>e</td>\n",
-       "      <td>0.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10142254217</td>\n",
-       "      <td>cable, satellite, and other pay television and...</td>\n",
-       "      <td>b</td>\n",
-       "      <td>4.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10165489824</td>\n",
-       "      <td>jewelry, watch, clock, and silverware shops</td>\n",
-       "      <td>b</td>\n",
-       "      <td>4.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10187291046</td>\n",
-       "      <td>watch, clock, and jewelry repair shops</td>\n",
-       "      <td>b</td>\n",
-       "      <td>3.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10192359162</td>\n",
-       "      <td>music shops - musical instruments, pianos, and...</td>\n",
-       "      <td>a</td>\n",
-       "      <td>6.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   merchant_abn                                         Store type  \\\n",
-       "0   10023283211  furniture, home furnishings and equipment shop...   \n",
-       "1   10142254217  cable, satellite, and other pay television and...   \n",
-       "2   10165489824        jewelry, watch, clock, and silverware shops   \n",
-       "3   10187291046             watch, clock, and jewelry repair shops   \n",
-       "4   10192359162  music shops - musical instruments, pianos, and...   \n",
-       "\n",
-       "  Revenue levels Take rate  \n",
-       "0              e      0.18  \n",
-       "1              b      4.22  \n",
-       "2              b      4.40  \n",
-       "3              b      3.29  \n",
-       "4              a      6.33  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "merchants = tbl_merchants_pd.drop(columns = ['name','tags'])\n",
     "merchants.head()\n",
-    "#merchants.to_parquet(f\"../data/curated/final_merchants.parquet\")"
+    "merchants.to_parquet(f\"../data/curated/final_merchant.parquet\")"
    ]
   }
  ],
