deleted SA2 and merchant data visualisation

--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -71,12 +71,11 @@
     }
    ],
    "source": [
-    "final = spark.read.parquet('../data/curated/final_merchant_info.parquet')\n",
+    "\n",
     "geospark = spark.read.parquet('../data/curated/SA2_2021_VIC_shapefile.parquet/')\n",
     "census = spark.read.parquet('../data/curated/final_census.parquet')\n",
-    "merchant_vic_data = geospark.join(final, geospark.SA2_CODE21 == final.SA2_CODE_2021, \"left\").drop(final.SA2_CODE_2021)\n",
-    "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)\n",
-    "merchant_vic_data.dtypes"
+    "\n",
+    "vic_data = geospark.join(census, geospark.SA2_CODE21 == census.SA2_CODE_2021, \"left\").drop(census.SA2_CODE_2021)\n"
    ]
   },
   {
@@ -125,15 +124,13 @@
    ],
    "source": [
     "visualisation(\"income_percentage\", vic_data, geospark,\"average income percentage by SA2\")\n",
-    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")\n",
-    "visualisation(\"count_cus_per_mon\", merchant_vic_data, geospark,\"customer number per month\")\n",
-    "visualisation(\"Avg_amount_monthly\", merchant_vic_data, geospark,\"average monthly amount\")"
+    "visualisation(\"age_percentage\", vic_data, geospark,\"age_percentage\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.7.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -147,12 +144,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7e1998ff7f8aa20ada591c520b972326324e5ea05489af9e422744c7c09f6dad"
+    "hash": "664b9b2cfc08063ed3ab9f92e6d6cbdfe30eb833d966541c89dc480f035db465"
    }
   }
  },
